# RandStrobes

./: .Rhistory  .gitignore  CMakeLists.txt  ClearResult.sh  LOG.TXT  LOG_98121.TXT  Makefile  README.md  massif.out.180072  massif.out.183914  massif.out.184339  massif.out.220157  massif.out.239887  massif.out.242449  massif.out.274029  massif.out.41880  massif.out.558727  massif.out.66394  massif.out.98121  massif.out.99066  res.txt
BenchMarkResults/: test.txt  test2.txt  test2header.csv  test3.txt  test4.txt
BenchMarkResults/Headers/: _RandomDataGenerator_NoHash_max_FastMAXor_1.csv  _RandomDataGenerator_NoHash_max_FixedSahlinMod_1.csv  _RandomDataGenerator_NoHash_max_GuoPibri_1 copy.csv  _RandomDataGenerator_NoHash_max_GuoPibri_1.csv  _RandomDataGenerator_NoHash_max_GuoPibri_10.csv  _RandomDataGenerator_NoHash_max_GuoPibri_100.csv  (+136 more)
ChosenConfigs/: _RandomDataGenerator_NoHash_max_FixedSahlinMod_1.json  _RandomDataGenerator_NoHash_max_GuoPibri_1.json  _RandomDataGenerator_NoHash_max_GuoPibri_100.json  _RandomDataGenerator_NoHash_max_MAMod_1.json  _RandomDataGenerator_NoHash_max_MAMod_10.json  _RandomDataGenerator_NoHash_max_SahlinBitCount_1.json  _RandomDataGenerator_NoHash_max_SahlinMod_1.json  _RandomDataGenerator_NoHash_max_SahlinMod_10.json  _RandomDataGenerator_NoHash_max_Shen_1.json  _RandomDataGenerator_NoHash_max_Shen_100.json  _RandomDataGenerator_NoHash_max_SpecialCaseFixedShen_1.json  _RandomDataGenerator_NoHash_max_XorVar_1.json  _RandomDataGenerator_NoHash_min_FixedSahlinMod_1.json  _RandomDataGenerator_NoHash_min_GuoPibri_1.json  _RandomDataGenerator_NoHash_min_MAMod_1.json  _RandomDataGenerator_NoHash_min_MAMod_10.json  _RandomDataGenerator_NoHash_min_SahlinBitCount_1.json  _RandomDataGenerator_NoHash_min_SahlinMod_1.json  _RandomDataGenerator_NoHash_min_SahlinMod_10.json  _RandomDataGenerator_NoHash_min_Shen_1.json  _RandomDataGenerator_NoHash_min_Shen_100.json  _RandomDataGenerator_NoHash_min_XorVar_1.json  _RandomDataGenerator_ThomasWangHash_max_FixedSahlinMod_1.json  _RandomDataGenerator_ThomasWangHash_max_GuoPibri_1.json  _RandomDataGenerator_ThomasWangHash_max_LiuPatroLi_1.json  _RandomDataGenerator_ThomasWangHash_max_MAMod_1.json  _RandomDataGenerator_ThomasWangHash_max_MAMod_10.json  _RandomDataGenerator_ThomasWangHash_max_MAXor_1.json  _RandomDataGenerator_ThomasWangHash_max_SahlinBitCount_1.json  _RandomDataGenerator_ThomasWangHash_max_SahlinMod_1.json  _RandomDataGenerator_ThomasWangHash_max_SahlinMod_10.json  _RandomDataGenerator_ThomasWangHash_max_Shen_1.json  _RandomDataGenerator_ThomasWangHash_max_SpecialCaseFixedShen_1.json  _RandomDataGenerator_ThomasWangHash_max_XorVar_1.json  _RandomDataGenerator_ThomasWangHash_min_GuoPibri_1.json  _RandomDataGenerator_ThomasWangHash_min_GuoPibri_100.json  _RandomDataGenerator_ThomasWangHash_min_MAMod_1.json  _RandomDataGenerator_ThomasWangHash_min_MAMod_10.json  _RandomDataGenerator_ThomasWangHash_min_MAXor_1.json  _RandomDataGenerator_ThomasWangHash_min_SahlinBitCount_1.json  (+57 more)
ConfigFiles/: _RandomDataGenerator_NoHash_max_GuoPibri_10000.json  _RandomDataGenerator_NoHash_max_SahlinBitCount_10000.json  _RandomDataGenerator_NoHash_max_SahlinMod_10000.json  _RandomDataGenerator_NoHash_max_Shen_10000.json  _RandomDataGenerator_NoHash_max_XorVar_10000.json  _RandomDataGenerator_NoHash_min_GuoPibri_10000.json  _RandomDataGenerator_NoHash_min_SahlinBitCount_10000.json  _RandomDataGenerator_NoHash_min_SahlinMod_10000.json  _RandomDataGenerator_NoHash_min_Shen_10000.json  _RandomDataGenerator_NoHash_min_XorVar_10000.json  _RandomDataGenerator_ThomasWangHash_max_GuoPibri_10000.json  _RandomDataGenerator_ThomasWangHash_max_LiuPatroLi_10000.json  _RandomDataGenerator_ThomasWangHash_max_SahlinBitCount_10000.json  _RandomDataGenerator_ThomasWangHash_max_SahlinMod_10000.json  _RandomDataGenerator_ThomasWangHash_max_Shen_10000.json  _RandomDataGenerator_ThomasWangHash_max_XorVar_10000.json  _RandomDataGenerator_ThomasWangHash_min_GuoPibri_10000.json  _RandomDataGenerator_ThomasWangHash_min_LiuPatroLi_10000.json  _RandomDataGenerator_ThomasWangHash_min_SahlinBitCount_10000.json  _RandomDataGenerator_ThomasWangHash_min_SahlinMod_10000.json  _RandomDataGenerator_ThomasWangHash_min_Shen_10000.json  _RandomDataGenerator_ThomasWangHash_min_XorVar_10000.json  _RandomDataGenerator_WyHash_max_GuoPibri_10000.json  _RandomDataGenerator_WyHash_max_LiuPatroLi_10000.json  _RandomDataGenerator_WyHash_max_SahlinBitCount_10000.json  _RandomDataGenerator_WyHash_max_SahlinMod_10000.json  _RandomDataGenerator_WyHash_max_Shen_10000.json  _RandomDataGenerator_WyHash_max_XorVar_10000.json  _RandomDataGenerator_WyHash_min_GuoPibri_10000.json  _RandomDataGenerator_WyHash_min_LiuPatroLi_10000.json  _RandomDataGenerator_WyHash_min_SahlinBitCount_10000.json  _RandomDataGenerator_WyHash_min_SahlinMod_10000.json  _RandomDataGenerator_WyHash_min_Shen_10000.json  _RandomDataGenerator_WyHash_min_XorVar_10000.json  _RandomDataGenerator_XXHash_max_GuoPibri_10000.json  _RandomDataGenerator_XXHash_max_LiuPatroLi_10000.json  _RandomDataGenerator_XXHash_max_SahlinBitCount_10000.json  _RandomDataGenerator_XXHash_max_SahlinMod_10000.json  _RandomDataGenerator_XXHash_max_Shen_10000.json  _RandomDataGenerator_XXHash_max_XorVar_10000.json  (+6 more)
CreatedSequences/: seq.txt
Data/: data  gen_0_25_40000_0.020000  gen_25_40000_0.020000  gen_mut02  gen_mut_02_1000_1000  test_data
EvaluationResults/: result.csv
EvaluationWithC++/: MetricCalculator.cpp  metric_calculator.cpp
EvaluationWithR/: .RData  .Rhistory  MetricsEvaluation.Rmd  MetricsEvaluation.html  MetricsEvaluation.nb.html  PlotMaker.Rmd  PlotMaker.nb.html
Includes/: BenchMark.hpp  LibrariesAndDefines.hpp  ResultPrinter.hpp
Results/: .~lock.final_result.csv#  Plotter.ipynb  Untitled.ipynb  plot_drawer.ipynb
Scripts/: .Strobe2.sh.swp  ClearResult.sh  CreateAndEvaluate.sh  InitializeNeededFolders.sh  Job.sh  ParallelCreateAndEvaluate.sh  SequentialCreateAndEvaluate.sh  Strobe2.sh
Sequense_generator/: Generator.cpp  Generator.py
Src/: BenchMark.cpp  ResultPrinter.cpp
(+450 files in other folders)
